--- a/index.html
+++ b/index.html
@@ -4,28 +4,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Assets/css/style.css" />
-    <link rel="shortcut icon" href="Assets/img/harisenin.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="Assets/img/harisenin.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="Assets/css/homepage.css" />
     <title>GROUP 4 FSD</title>
   </head>
   <body>
-    <div class="container_row" style="display: flex">
-      <aside class="profile-card">
-        <header>
-          <a target="_blank" href="#">
-            <img src="Assets/img/harisenin.png" class="hoverZoomLink" />
-          </a>
-          <h2>GROUP 4 FSD</h2>
-          <ul style="text-align: justify;">
-            <li>I Made Hary Mahayana (Arik)</li>
-            <li>Mujahid Ansori Majid (Jahid)</li>
-            <li>Affu Dina Ilma Barkah (Affu)</li>
-            <li>Ahmad Fahmi Faza (Fahmi)</li>
-            <li>Effenril Agung M. (Effenril)</li>
-            <li>Endri Nastiar (Endri)</li>
-            <li>Dosma Rina Br Manik (Nana)</li>
+    <header class="header">
+      <div class="header__container">
+        <div class="header__logo">
+          <img src="Assets/img/harisenin.png" alt="Hari senin logo" />
+        </div>
+        <nav>
+          <ul class="header__list">
+            <li class="header__list-item"><a href="#">Home</a></li>
+            <li class="header__list-item"><a href="#">Program</a></li>
+            <li class="header__list-item"><a href="#">Corporat</a></li>
+            <li class="header__list-item"><a href="#">About</a></li>
           </ul>
-        </header>
-      </aside>
-    </div>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <div class="container_row" style="display: flex">
+        <aside class="profile-card">
+          <div class="profile__container">
+            <a target="_blank" href="#">
+              <img src="Assets/img/harisenin.png" class="hoverZoomLink" />
+            </a>
+            <h2>GROUP 4 FSD</h2>
+            <ul style="text-align: justify">
+              <li>I Made Hary Mahayana (Arik)</li>
+              <li>Mujahid Ansori Majid (Jahid)</li>
+              <li>Affu Dina Ilma Barkah (Affu)</li>
+              <li>Ahmad Fahmi Faza (Fahmi)</li>
+              <li>Effenril Agung M. (Effenril)</li>
+              <li>Endri Nastiar (Endri)</li>
+              <li>Dosma Rina Br Manik (Nana)</li>
+            </ul>
+          </div>
+        </aside>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
