--- a/index.html
+++ b/index.html
@@ -27,5 +27,12 @@
         </header>
       </aside>
     </div>
+
+
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2023 by Group 4 FullStack HariSenin. ALL Right Reserved</p>
+      </div>
+     </footer>
   </body>
 </html>
