menambahkan tanda footer

--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
       </aside>
     </div>
 
-
+    
+    <!-- membuat footer = endri  -->
     <footer class="footer">
       <div class="footer-text">
         <p>Copyright &copy; 2023 by Group 4 FullStack HariSenin. ALL Right Reserved</p>
       </div>
      </footer>
+     <!-- selesai -->
+
+
   </body>
 </html>
