--- a/index.html
+++ b/index.html
@@ -4,22 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="Assets/css/style.css" />
-    <link rel="shortcut icon" href="Assets/img/harisenin.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="Assets/img/harisenin.png"
+      type="image/x-icon"
+    />
     <title>GROUP 4 FSD</title>
   </head>
   <body>
     <div class="container_row" style="display: flex">
       <aside class="profile-card">
         <header>
-          <a target="_blank" href="#">
+          <a href="#" target="_blank" href="#">
             <img src="Assets/img/harisenin.png" class="hoverZoomLink" />
           </a>
           <h2>GROUP 4 FSD</h2>
-          <ul style="text-align: justify;">
+          <ul style="text-align: justify">
             <li>I Made Hary Mahayana (Arik)</li>
             <li>Mujahid Ansori Majid (Jahid)</li>
             <li>Affu Dina Ilma Barkah (Affu)</li>
-            <li>Ahmad Fahmi Faza (Fahmi)</li>
+            <li>
+              <a href="profile_fahmi.html" style="text-decoration: none">
+                Ahmad Fahmi Faza (Fahmi)</a
+              >
+            </li>
             <li>Effenril Agung M. (Effenril)</li>
             <li>Endri Nastiar (Endri)</li>
             <li>Dosma Rina Br Manik (Nana)</li>
