--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
         </aside>
       </div>
     </main>
-    <footer></footer>
+
+     <!-- membuat footer = endri  -->
+     <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2023 by Group 4 FullStack HariSenin. ALL Right Reserved</p>
+      </div>
+     </footer>
+     <!-- selesai -->
+
   </body>
 </html>
