--- a/index.html
+++ b/index.html
@@ -45,18 +45,21 @@
               <li>Endri Nastiar (Endri)</li>
               <li>Dosma Rina Br Manik (Nana)</li>
             </ul>
+            <span>Group 4 FSD JAYA JAYA JAYA !!</span>
           </div>
         </aside>
       </div>
     </main>
 
-     <!-- membuat footer = endri  -->
-     <footer class="footer">
+    <!-- membuat footer = endri  -->
+    <footer class="footer">
       <div class="footer-text">
-        <p>Copyright &copy; 2023 by Group 4 FullStack HariSenin. ALL Right Reserved</p>
+        <p>
+          Copyright &copy; 2023 by Group 4 FullStack HariSenin. ALL Right
+          Reserved
+        </p>
       </div>
-     </footer>
-     <!-- selesai -->
-
+    </footer>
+    <!-- selesai -->
   </body>
 </html>
